# distributed-rust

./: .gitignore  Cargo.toml  README.md  build.rs
map/: map-0  map-1  map-10  map-11  map-12  map-13  map-2  map-3  map-4  map-5  map-6  map-7  map-8  map-9
reduce/: reduce-0  reduce-0-0  reduce-0-1  reduce-0-2  reduce-0-3  reduce-0-4  reduce-1  reduce-1-0  reduce-1-1  reduce-1-2  reduce-1-3  reduce-1-4  reduce-10-0  reduce-10-1  reduce-10-2  reduce-10-3  reduce-10-4  reduce-11-0  reduce-11-1  reduce-11-2  reduce-11-3  reduce-11-4  reduce-12-0  reduce-12-1  reduce-12-2  reduce-12-3  reduce-12-4  reduce-13-0  reduce-13-1  reduce-13-2  reduce-13-3  reduce-13-4  reduce-2  reduce-2-0  reduce-2-1  reduce-2-2  reduce-2-3  reduce-2-4  reduce-3  reduce-3-0  (+35 more)
result/: result-0  result-1  result-2  result-3  result-4
src/data/: alice.txt  test.txt
src/gui/: app.rs  gui.rs  lib.rs  main.rs  node.rs  utils.rs  worker.rs
src/map-reduce/: word_count.rs
src/mapreduce/: common.rs  common_rpc.rs  data.rs  main.rs  mapreduce.proto  mapreduce.rs  master.rs  master_remoteworker.rs  master_rpc.rs  master_scheduler.rs  word_count.rs  worker.rs  worker_rpc.rs
src/proto/: common_rpc.proto
src/voting/: server.rs
