[package]
name = "distributedrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
eframe = "0.23.0"
egui = "0.23.0"
egui_file = "0.11"

[build-dependencies]
tonic-build = "0.10.2"

# gRPC test server binary
[[bin]]
name = "voting-server"
path = "src/voting/server.rs"

# gRPC test client binary
[[bin]]
name = "voting-client"
path = "src/voting/client.rs"

# Distributed processing GUI 
[[bin]]
name = "gui"
path = "src/gui/main.rs"

# gRPC test client binary
[[bin]]
name = "data"
path = "src/mapreduce/data.rs"

# Word Count
[[bin]]
name = "word_count"
path = "src/map-reduce/word_count.rs"
