[package]
name = "distributedrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
eframe = "0.23.0"
egui = "0.23.0"
egui_file = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = "0.4.5"
clap = "2.33"

[build-dependencies]
tonic-build = "0.10.2"

# Distributed processing GUI 
[[bin]]
name = "gui"
path = "src/gui/main.rs"

# Master node
[[bin]]
name = "master"
path = "src/mapreduce/master.rs"

# Worker node
[[bin]]
name = "worker"
path = "src/mapreduce/worker.rs"

# main
[[bin]]
name = "main"
path = "src/mapreduce/main.rs"
